# GoogologyQuest-Cpp

./: .gitignore  CMakeLists.txt  README.md  build.bat  rebuild.bat
Sources/: main.cpp
Sources/Forms/: maininterface.ui  ui_MainInterface.h
Sources/Header/: Button.h  maininterface.h
Sources/Module/: Button.cpp  maininterface.cpp
